# prepare

./: .env.example  .firebaserc  .gitignore  .replit  GUIDE.md  README.md  app.py  firebase.json  index.html  main.py  manual.md  package-lock.json  package.json  pyproject.toml  requirements.txt  test_download.json  test_line_env.js  test_output.docx  test_request.json  vite.config.js  教案範例格式.docx
.github/workflows/: deploy.yml
.local/state/replit/: log-query.db-shm  log-query.db-wal
.local/state/replit/agent/: repl_state.json
assets/: index-BbRa88xp.js  index-Be5fPc9B.css  index-Bx3TulRj.js  index-C4T61R29.css  index-CWvHzu2n.css  index-Cd0V8ulz.css  index-DKHDnmbB.css  index-DltM9N60.css  index-DmnKSBrL.js  index-__RKB6Eb.css
functions/: .env.example  index.js  package-lock.json  package.json  test_line.js
static/: lesson_plan.docx
static/css/: styles.css
static/js/: firebase-config.js  script.js
static/uploads/: lesson_plan_6249b405-b886-4e84-b7ca-e991f5824902.docx
templates/: index.html
