[tool.poetry]
name = "repl-nix-jiao-an-sheng-cheng-qi-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.9"
email-validator = "^2.2.0"
flask = "^3.0.3"
openai = "^1.51.0"
python-docx = "0.8.11"
beautifulsoup4 = "^4.12.3"
flask-mail = "0.9.1"
docx = "^0.2.4"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
